--- a/ide-redesign/styles/_toolbar.scss
+++ b/ide-redesign/styles/_toolbar.scss
@@ -32,7 +32,7 @@
   > div {
     display: inline;
     float: left;
-    height: 40px;
+    height: 35px;
     span {
       cursor: pointer;
       display: inline-block;
